feat: Implement login and dashboard components with routing
- Added routing for login and dashboard components.
- Created LoginComponent with form handling and theme toggle functionality.
- Developed DashboardComponent to display parcel tracking information.
- Implemented ThemeService for managing light and dark themes.
- Added styles for login and dashboard pages.
- Created unit tests for LoginComponent, DashboardComponent, and ThemeService.

--- a/angular.json
+++ b/angular.json
@@ -30,6 +30,8 @@
               }
             ],
             "styles": [
+              "node_modules/bootstrap/dist/css/bootstrap.min.css",
+              "node_modules/@fortawesome/fontawesome-free/css/all.min.css",
               "src/styles.scss"
             ]
           },
@@ -88,11 +90,16 @@
               }
             ],
             "styles": [
+              "node_modules/bootstrap/dist/css/bootstrap.min.css",
+              "node_modules/@fortawesome/fontawesome-free/css/all.min.css",
               "src/styles.scss"
             ]
           }
         }
       }
     }
+  },
+  "cli": {
+    "analytics": "a2b17ee2-5192-4bcb-a377-5c51be6ceea8"
   }
 }
